src-ken&y/objects/Criteria__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Field__c</fullName>
        <label>Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <label>Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Operator__c</fullName>
        <label>Operator</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process__c</fullName>
        <label>Process</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference__c</fullName>
        <label>Reference</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Step__c</fullName>
        <label>Step</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value_Field__c</fullName>
        <label>Value/Field</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>Criteria</label>
</CustomObject>